# SoftDeskApi

./: .gitignore  README.md  pyproject.toml
SoftApi/: Comments Create.bru  Comments.bru  Contributors Create.bru  Issues Create.bru  Issues.bru  Obtein Token.bru  Projects Create.bru  Projects.bru  Register.bru  Token Refresh.bru  bruno.json
issues/: models.py  serializers.py  urls.py  views.py
issues/migrations/: 0001_initial.py
projects/: models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_contributor.py
softdesk_api/: permissions.py  settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_annif_date_user_birth_date.py
